--- a/HelloDrone/app/src/main/res/layout/activity_main.xml
+++ b/HelloDrone/app/src/main/res/layout/activity_main.xml
@@ -45,43 +45,42 @@
         </LinearLayout>
 
         <LinearLayout
-                android:layout_width="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/labelWifiChannel"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_weight="1"
+                android:text="Wifi Channels"/>
 
             <TextView
-                    android:id="@+id/labelRemoteControl"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="Remote"/>
+                android:id="@+id/wifiChannelList"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:text="initializing"
+                android:textAlignment="center"/>
 
-            <TextView
-                    android:id="@+id/rcStateTxt"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:text="state"
-                    android:textAlignment="center"/>
+            <Button
+                android:id="@+id/changeChannelBtn"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:enabled="true"
+                android:text="change channel"/>
 
-            <TextView
-                    android:id="@+id/rcBatteryTxt"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text=""
-                    android:textAlignment="textEnd"/>
         </LinearLayout>
     </LinearLayout>
 
     <com.parrot.drone.groundsdk.stream.GsdkStreamView
-            android:id="@+id/stream_view"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/info"
-            app:layout_constraintBottom_toTopOf="@id/takeOffLandBt"
-            tools:layout_editor_absoluteY="38dp">
-    </com.parrot.drone.groundsdk.stream.GsdkStreamView>
+        android:id="@+id/stream_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/takeOffLandBt"
+        app:layout_constraintTop_toBottomOf="@id/info"></com.parrot.drone.groundsdk.stream.GsdkStreamView>
 
     <Button
         android:id="@+id/takeOffLandBt"
