--- a/HelloDrone/app/src/main/res/layout/activity_main.xml
+++ b/HelloDrone/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="2"
-                    android:text="state"
+                    android:text="CONNECTED"
                     android:textAlignment="center"/>
 
             <TextView
@@ -42,6 +42,35 @@
                     android:layout_weight="1"
                     android:text=""
                     android:textAlignment="textEnd"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/labelRemoteControl"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Remote"/>
+
+            <TextView
+                android:id="@+id/rcStateTxt"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:text="state"
+                android:textAlignment="center"/>
+
+            <TextView
+                android:id="@+id/rcBatteryTxt"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text=""
+                android:textAlignment="textEnd"/>
         </LinearLayout>
 
         <LinearLayout
@@ -61,7 +90,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:text="initializing"
+                android:text="DISCONNECTED"
                 android:textAlignment="center"/>
 
             <Button
